sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:9: error: not found: value j
      copie(j-1,j)
            ^AlgInsertionSort:9: error: not found: value j
      copie(j-1,j)
                ^