sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var lgr:Int=getNombreValeurs()
  var a:Int=0
  for (i<-1 to lgr-1) {
    var v:Int=getValeur(i)
    var ikeep:Int=i
    while (ikeep > 0 && plusPetit(v,ikeep-1)) {
      copie(j-1,j)
      ikeep-=1
    }
   	copie(v,ikeep)
 	}
}